Watson API connected

--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "start": "bash -c 'NODE_ENV=production node index.js'",
     "clean": "bash -c 'rm -rf public/{js,css}'",
     "dev:js": "node index dev",
-    "dev:css": "gulp scss:watch",
     "dev": "npm-run-all clean -p dev:*",
     "build:js": "webpack",
     "build:css": "gulp scss:build",
@@ -34,18 +33,25 @@
     "@material-ui/core": "^1.1.0",
     "@material-ui/icons": "^1.1.0",
     "@material-ui/lab": "^1.0.0-alpha.3",
+    "audio-decode": "^1.4.0",
+    "audio-lena": "^2.1.1",
     "babel-core": "^6.24.1",
     "babel-preset-latest-minimal": "^1.1.2",
     "bluebird": "^3.5.0",
     "body-parser": "^1.17.2",
     "compression": "^1.6.2",
     "cookie-parser": "^1.4.3",
+    "dotenv": "^5.0.1",
     "express": "^4.15.3",
+    "filereader": "^0.10.3",
+    "fs": "0.0.1-security",
     "lowdb": "^0.14.0",
     "mime": "^1.3.6",
     "morgan": "^1.8.1",
+    "react-player": "^1.6.2",
     "underscore-db": "^0.12.2",
-    "vash": "^0.12.2"
+    "vash": "^0.12.2",
+    "watson-developer-cloud": "^3.4.4"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.1",
